update README.md, include global scss variables, turn off some eslint rules, set default layout, style header, add data fetch to characters page

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,1 +1,10 @@
-$c1: black;
+// COLORS
+$c1: #1d3557;
+$c2: #457b9d;
+$c3: #a8dadc;
+$c4: #f1faee;
+$c5: #e63946;
+
+
+//SIZES
+$defaultHeaderHeight: 51px;
